Attempt to fix bizarre styling on iOS

--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -23,7 +23,7 @@
     }
   }
 
-  .container {
+  .button-container {
     display: flex;
     flex-direction: column;
     padding: 40px 20px;
